--- a/.env.example
+++ b/.env.example
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=proyecto-daw
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=root
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -29,13 +29,13 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=smtp.gamil.com
-MAIL_PORT=325
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=465
 MAIL_USERNAME=proyectodaw2022@gmail.com
 MAIL_PASSWORD=olnxmfidaxzpekjg
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_ENCRYPTION=ssl
+MAIL_FROM_ADDRESS="proyectodaw2022@gmail.com"
+MAIL_FROM_NAME="Proyecto DAW"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
