Login y seeders completos

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=ProyectoDAW
+APP_NAME=Retkon
 APP_ENV=local
 APP_KEY=base64:c4wfaKECD0cOs4+G1fkukcwqBPBAVgz9i4slqP4LamY=
 APP_DEBUG=true
@@ -34,7 +34,7 @@ MAIL_PORT=465
 MAIL_USERNAME=proyectodaw2022@gmail.com
 MAIL_PASSWORD=olnxmfidaxzpekjg
 MAIL_ENCRYPTION=ssl
-MAIL_FROM_ADDRESS="proyectodaw2022@gmail.com"
+MAIL_FROM_ADDRESS="retkon@gmail.com"
 MAIL_FROM_NAME="Proyecto DAW"
 
 AWS_ACCESS_KEY_ID=
