Editar login y register

--- a/.env.example
+++ b/.env.example
@@ -35,7 +35,7 @@ MAIL_USERNAME=proyectodaw2022@gmail.com
 MAIL_PASSWORD=olnxmfidaxzpekjg
 MAIL_ENCRYPTION=ssl
 MAIL_FROM_ADDRESS="retkon@gmail.com"
-MAIL_FROM_NAME="Proyecto DAW"
+MAIL_FROM_NAME="Retkon"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
