--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,8 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/components.js": "/js/components.js",
+    "/js/scripts.js": "/js/scripts.js",
+    "/css/styles.css": "/css/styles.css",
+    "/css/app.css": "/css/app.css",
+    "/css/footer.css": "/css/footer.css"
 }
