--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     },
     "dependencies": {
         "autoprefixer": "10.4.5",
+        "echarts": "^5.3.2",
         "sweetalert2": "^11.4.17"
     }
 }
