vista home admin

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_NAME=Retkon
 APP_ENV=local
 APP_KEY=base64:c4wfaKECD0cOs4+G1fkukcwqBPBAVgz9i4slqP4LamY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://proyecto-daw.test
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
