--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^3.4",
+        "spatie/laravel-medialibrary": "^10.3",
         "spatie/laravel-permission": "^5.5",
         "yajra/laravel-datatables": "^9.0"
     },
