--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dependencies": {
         "autoprefixer": "10.4.5",
         "echarts": "^5.3.2",
+        "jspdf": "^2.5.1",
         "sweetalert2": "^11.4.17"
     }
 }
